--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -2,16 +2,12 @@ body{
     display: flex;
     flex-direction: row;
 }
-    
-    
-
-
 
 header{
     background-color: blue;
     color: white;
     padding: 20px;
-
+    
 }
 
 nav ul{list-style: none;
@@ -25,7 +21,6 @@ nav ul{list-style: none;
 nav li{color: white;
     text-decoration: none;
     font-weight: bold;
-
 }
 
 .logo{
@@ -58,9 +53,16 @@ aside{
 
 }
 
+@media (max-width: 768px) {
+  .works_on_smartphone main {
+    flex-direction: column;
+  }
+}
+
 
 footer{background-color: royalblue;
     color: 20px;
     text-align: center;
     padding: 10px;
 }
+
