--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -361,3 +361,43 @@ color: #666;
       line-height: 1.7;
       color: #777;
     }
+
+
+
+
+
+
+    .footer {
+  background-color: #0a1a2b;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 50px;
+  position: relative;
+}
+
+.footer-left .logo {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer-center {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 12px;
+  color: #aaa;
+}
+
+.footer-right a {
+  margin-left: 15px;
+  color: white;
+  font-size: 18px;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.footer-right a:hover {
+  color: #00aced; /* لون عند الـ hover */
+}
